--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "csvtojson": "^2.0.10",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jest-md-dashboard": "^0.8.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1"
